--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -75,7 +75,7 @@
                   
                       <div >
                         <div class="trophy-icon d-flex align-items-center justify-content-end">
-                        <h3 class="m-0">PERSONAL RECORD</h3><i class="fas fa-trophy" style="color: yellow!important;"></i>
+                        <h3 class="m-0">PERSONAL RECORD</h3><i class="fas fa-trophy" style="color: rgb(228, 228, 46)!important;"></i>
                       </div>
                         <div class="d-flex flex-column">
                           <% let bodyWeight = mergedArray[i].bodyweight == 0 ? "n/a" : mergedArray[i].bodyweight + "KG" %>
