--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 <div class="container">
-  <div class="mb-2 d-flex mt-4 w-25" style="margin-left:1rem;">
+  <div class="mb-2 d-flex pt-4 w-25" style="margin-left:1rem;">
     <button id="show-all-posts" class="btn btn-primary rounded-0 border-0 posts-btn active" ><i class="fas fa-table"></i></button>
     <button id="show-category-posts" class="btn btn-primary rounded-0 border-0 table-btn"><i class="fas fa-trophy"></i></button>
   </div>
