--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -12,7 +12,7 @@
           <div class="d-flex align-items-center mb-1 p-2">
             <a href="/profile/<%= post.likes[i]._id %>" >
               <div class="d-flex flex-row align-items-center">
-          <%if( post.likes[i]  == "" ){%>
+          <%if( post.likes[i].profilePic.url  == "" ){%>
             <img class="rounded-circle mr-3 feed-pic" src="/imgs/default.png" alt="Profile picture" width="26" height="26">
             <%}else{%>
             <img class="rounded-circle mr-3 feed-pic" src="<%= post.likes[i].profilePic.url %>" alt="Profile picture" width="26" height="26">
