--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -70,10 +70,11 @@
         <button id="table-btn" class="btn btn-primary rounded-0 border-0 table-btn"><i class="fas fa-trophy"></i></button>
       </div>
 
-
+     
       <ul id="posts-container" class="row list-unstyled profile-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
+        <% if(posts.length > 0){ %>
         <%for(var i= (posts.length-1); i>=0; i--){%>
-
+        
         <li style="width: 100%;">
           <a href="/post/<%= posts[i]._id%>" style="display: block; position: relative; padding-bottom: 100%; height: 0;">
           
@@ -84,8 +85,16 @@
 
           </a>
         </li>
-        <% } %>
+     
+      
+      <% } %>
+      <% } else { %>
+        <div class="container" style="padding: 0rem 0.2rem;">
+          <p class="p-3">this user has no posts</p>
+        </div>
+      <% } %>
       </ul>
+      
     
     </div>
    
