--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -98,14 +98,14 @@
     
     </div>
    
-    <div id="table-container" style="display:none; padding: 0rem 0.2rem;" class="col-12">
+    <div id="table-container" style="display:none;" class="col-12">
       <% if(prs.length > 0){ %>
-      <table  class="table table-bordered table-striped">
+      <table  class="styled-table">
         <thead>
           <tr>
             <th>Category</th>
             <th>Weight</th>
-            <th>BW</th>
+            <th >BW</th>
           </tr>
         </thead>  
         <tbody>
