--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,10 +1,10 @@
 <%- include('partials/header') -%>
 <div class="container">
   <div class="mb-2 d-flex pt-4 w-25" style="margin-left:1rem;">
-    <button id="show-all-posts" class="btn btn-primary rounded-0 border-0 posts-btn active" ><i class="fas fa-table"></i></button>
-    <button id="show-category-posts" class="btn btn-primary rounded-0 border-0 table-btn"><i class="fas fa-trophy"></i></button>
+    <button id="show-all-posts" class="icon-btn btn-primary rounded-0 border-0 posts-btn active" ><i class="fas fa-table"></i></button>
+    <button id="show-category-posts" class="icon-btn btn-primary rounded-0 border-0 table-btn"><i class="fas fa-trophy"></i></button>
   </div>
-  <div class="flex-column justify-content-center mt-2">
+  <div class="flex-column justify-content-center mt-4">
     <ul class="col-12 col-md-8 col-lg-6 list-unstyled mx-auto">
       <% for(var i=0; i<mergedArray.length; i++) {%>
         <% if(mergedArray[i].category) {%>
@@ -12,7 +12,7 @@
           <% } else { %>
         <li id="post-<%= mergedArray[i]._id %>" class="post-item mb-5 lazy all-post">
           <% }  %> 
-          <div class="d-flex justify-content-between align-items-center mb-1 p-2">
+          <div class="d-flex justify-content-between align-items-center mb-1 p-3">
               <a href="/profile/<%= mergedArray[i].user._id %>" >
                 <div class="d-flex flex-row align-items-center">
                  
@@ -60,7 +60,7 @@
         
           </div>
           <a href="/post/<%= mergedArray[i]._id%>" class="post">
-          <div class="post-info ml-3 d-flex align-items-top flex-column p-2">
+          <div class="post-info ml-3 d-flex align-items-top flex-column p-3">
             <div class="d-flex align-items-top mb-1 justify-content-between ">
 
                 
@@ -73,7 +73,7 @@
                   
                       <div >
                         <div class="trophy-icon d-flex align-items-center justify-content-end">
-                        <h3 class="m-0">PERSONAL RECORD</h3><i class="fas fa-trophy" style="color: rgb(228, 228, 46)!important;"></i>
+                        <h3 class="m-0">Personal Record</h3><div class="icon-btn-trophy"><i class="fas fa-trophy" style="color: rgb(191, 152, 34)!important;"></i></div>
                       </div>
                         <div class="d-flex flex-column">
                           <% let bodyWeight = mergedArray[i].bodyweight == 0 ? "n/a" : mergedArray[i].bodyweight + "KG" %>
