--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <%  if (post.media.type == "video") { %>
-  <div class="row justify-content-center mt-5 video-margin">
+  <div class="row justify-content-center mt-5 video-margin post-thumbnail">
        <!-- Check if the browser is Safari -->
      
        
