--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
     <header class="container fixed-header">
       <div class="header ">
         <a href="/feed"><h1 class="logo m-0">gymstats</h1></a>
-        <div class="headerlinks">
+        <div class="headerlinks d-flex justify-content-center align-items-center">
           <!-- header.ejs -->
          
           
@@ -54,8 +54,11 @@
                   <% } %>
                 <%}%>
               </div>
-            </a>
-            <a href="/postmenu"><i class="fas fa-plus"></i></a>
+              <a href="/postmenu" class="">
+                <div class="plus-icon">
+                  <i class="fas fa-plus"></i>
+                 </div>
+              </a>
           </div>
         </div>
       </div>
