--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     
     
-     <header class="container fixed-footer ">
+     <footer class="container fixed-footer ">
         <div class="footer justify-content-between">
           <div class="links">
 
@@ -19,7 +19,7 @@
             </div>
           </div>
         </div>
-      </header>
+      </footer>
     
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
