--- a/views/postmenu.ejs
+++ b/views/postmenu.ejs
@@ -41,7 +41,7 @@
             </select>
             <div class="mb-2 mt-2">
               <label for="weight" class="form-label">Body Weight in kg</label>
-              <input class="w-100" type="number" id="weight" name="weight" value="<%=loggedUser.bodyweight%>" required>
+              <input class="w-100" type="number" id="bodyweight" name="bodyweight" value="<%=loggedUser.bodyweight%>" required>
             </div>
             <div class="mb-2 mt-2">
               <label for="weight" class="form-label">Weight in kg</label>
